Port Cadenza to GraalVM and Truffle 25.3.4.1